# srrg_core_viewers

./: CMakeLists.txt  package.xml
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  srrg_cloud_viewer_gui_app.cpp  trajectory_viewer.cpp
src/srrg_core_viewers/: CMakeLists.txt  cloud_viewer.cpp  cloud_viewer.h  draw_attributes.h  simple_viewer.cpp  simple_viewer.h
